# skygate

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
apps/skygate-ui/: AboutWindow.qml  CMakeLists.txt  Main.qml  PreferencesActionButton.qml  PreferencesAppearanceSection.qml  PreferencesCatalogSection.qml  PreferencesCheckBox.qml  PreferencesCityPicker.qml  PreferencesComboBox.qml  PreferencesGeneralSection.qml  PreferencesGroupTitle.qml  PreferencesSectionButton.qml  PreferencesSkySection.qml  PreferencesTextField.qml  PreferencesTimeZonePicker.qml  PreferencesWindow.qml  SearchToolbar.qml  SkyAppMenuButton.qml  SkyHoverLabel.qml  SkyInteractionLayer.qml  SkyObjectInspector.qml  SkyOverlayLabel.qml  SkyOverlayLayer.qml  SkySelectionMarker.qml  SkySettingsDraft.qml  StatusDateTimePopup.qml  StatusFooter.qml  StatusNightConditionsPopup.qml  TimelineToolbar.qml
apps/skygate-ui/linux/: com.skygate.SkyGate.desktop
apps/skygate-ui/macos/: Info.plist.in
apps/skygate-ui/qml/: Main.qml
apps/skygate-ui/qml/controls/: PreferencesActionButton.qml  PreferencesCheckBox.qml  PreferencesComboBox.qml
apps/skygate-ui/qml/preferences/: PreferencesAppearanceSection.qml  PreferencesCatalogSection.qml  PreferencesCityPicker.qml  PreferencesDraft.qml  PreferencesGeneralSection.qml  PreferencesSkySection.qml  PreferencesTimeZonePicker.qml
apps/skygate-ui/qml/sky/: SkyObjectInspector.qml  (+2 more)
apps/skygate-ui/resources/: icons.qrc  locations.qrc  themes.qrc
apps/skygate-ui/src/: CatalogCoordinator.cpp  CatalogCoordinator.hpp  LocationCatalogModel.cpp  MacDockIcon.mm  SkyCatalogManager.cpp  SkyCatalogManager.hpp  SkyConstellationRenderBuilder.hpp  SkyContextController.cpp  SkyContextController.hpp  SkyContextControllerCatalog.cpp  SkyContextControllerNightConditions.cpp  SkyContextControllerSearch.cpp  SkyContextControllerSettings.cpp  SkyContextControllerSupport.cpp  SkyContextControllerSupport.hpp  SkyContextControllerTimeline.cpp  SkyContextState.hpp  SkyHitTargetIndex.cpp  SkyHitTargetIndex.hpp  SkyLogging.cpp  SkyLogging.hpp  SkyObjectInspectorBuilder.hpp  SkyObjectInspectorFormatters.cpp  SkyObjectSearchModel.cpp  SkyObjectSearchModel.hpp  SkyObjectTrailBuilder.cpp  SkyOverlayLayerSettings.cpp  SkyOverlayLayerSettings.hpp  SkyOverlayLayerVisibility.hpp  SkyRenderBodyBuilder.cpp  SkyRenderBodyBuilder.hpp  SkyRenderBuilders.cpp  SkyRenderBuilders.hpp  SkyRenderHorizontalLookup.cpp  SkySceneComposition.cpp  SkySceneComposition.hpp  SkySceneFramePipeline.cpp  SkySceneModel.cpp  SkySceneModel.hpp  SkySceneOverlayData.hpp  (+21 more)
apps/skygate-ui/tests/: AsyncTestSupport.hpp  CMakeLists.txt  CatalogCacheTestSupport.hpp  CatalogCoordinatorDownloadTests.cpp  CatalogDownloadServiceTests.cpp  CatalogDownloadWorkflowTests.cpp  CatalogPayloadParseServiceTests.cpp  FakeNetworkAccessManager.hpp  LocationCatalogModelTests.cpp  LogCapture.hpp  LogCaptureTests.cpp  PackagedAppSmoke.cmake  PerformanceGuardTests.cpp  QmlComponentLoadTests.cpp  QmlComponentTestSupport.hpp  QmlDateTimePopupTests.cpp  QmlInteractionLayerTests.cpp  QmlMainWindowRenderingTests.cpp  QmlMainWindowTests.cpp  QmlNightConditionsPopupTests.cpp  QmlObjectTreeTestSupport.hpp  QmlOverlayRenderingTestSupport.hpp  QmlOverlayRenderingTests.cpp  QmlPreferenceControlTests.cpp  QmlPreferencesDraftTests.cpp  QmlPreferencesLocationTimeTests.cpp  QmlPreferencesTestSupport.hpp  QmlPreferencesTests.cpp  QmlPreferencesWindowTests.cpp  QmlRenderingTestSupport.hpp  QmlRenderingTests.cpp  QmlSettingsFixture.hpp  QmlSkyModelTestSupport.hpp  QmlSmokeTests.cpp  QmlStatusFooterTests.cpp  QmlTestPaths.hpp  QmlTestSupport.hpp  QmlToolbarTests.cpp  QmlViewportRenderTestSupport.hpp  QmlWarningScope.hpp  (+29 more)
apps/skygate-ui/windows/: SkyGate.rc
libs/skygate-core/: CMakeLists.txt
libs/skygate-core/src/: GeoLocation.cpp  PreparedProjection.cpp  ProjectionFactory.cpp  ProjectionTypes.cpp  SkyTypes.cpp  SystemTimeSource.cpp
libs/skygate-core/tests/: AzimuthalEquidistantProjectionTests.cpp  CMakeLists.txt  CoreTypesTests.cpp  GeoLocationTests.cpp  Geometry2dTests.cpp  GeometryHelpersTests.cpp  GeometryMathTests.cpp  GeometryPropertyTests.cpp  PerspectiveProjectionTests.cpp  PreparedProjectionTests.cpp  ProjectionFactoryTests.cpp  ProjectionMathTests.cpp  ProjectionPropertyTests.cpp  ProjectionTests.cpp  ScreenGeometryTests.cpp  SphericalGeometryTests.cpp  StereographicProjectionTests.cpp  TestSupport.hpp  ViewportMathTests.cpp  main.cpp
libs/skygate-ephemeris/: CMakeLists.txt
libs/skygate-ephemeris/src/: BodyTrailCalculator.cpp  BundledStarCatalog.cpp  CelestialReferenceCalculator.cpp  ConstellationReferenceCalculator.cpp  EphemerisEngineQueries.cpp  EphemerisEngineStub.cpp  IEphemerisEngine.cpp  NightConditionsCalculator.cpp  ObservationEventCalculator.cpp  SimpleEphemerisEngine.cpp  StringUtilities.cpp  StringUtilities.hpp
libs/skygate-ephemeris/tests/: BodyTrailCalculatorTests.cpp  CMakeLists.txt  CatalogArchiveCodecTests.cpp  CatalogArchiveInflaterTests.cpp  CatalogArchivePropertyTests.cpp  CatalogArchiveZipDirectoryTests.cpp  CatalogArchiveZipEntryExtractorTests.cpp  CatalogComposerTests.cpp  CatalogDelimitedReaderTests.cpp  CatalogFactoryTests.cpp  CatalogFixtureCorpusTests.cpp  CatalogParsingUtilitiesTests.cpp  CatalogPayloadFormatDetectorTests.cpp  CatalogPayloadParserTests.cpp  CatalogPerformanceGuardTests.cpp  CatalogPropertyTests.cpp  CatalogRowsTests.cpp  CelestialReferenceCalculatorTests.cpp  EphemerisEngineBaselineTests.cpp  EphemerisEngineFallbackTests.cpp  EphemerisEngineTests.cpp  EphemerisPrivateHelperTests.cpp  EphemerisRegressionTests.cpp  HygCatalogGzipTests.cpp  HygCatalogParserTests.cpp  NightConditionsCalculatorTests.cpp  ObservationEventCalculatorTests.cpp  OpenNgcObjectMapperTests.cpp  OpenNgcParserEdgeTests.cpp  StarCatalogTests.cpp  StellariumConstellationParserTests.cpp  StellariumExtractorTests.cpp  StringUtilitiesTests.cpp  TestHelpers.hpp  TestSupport.hpp  main.cpp
tests/: CMakeLists.txt  skygate-unit-tests.cpp
tests/support/: CMakeLists.txt
(+334 files in other folders)
